helm-deployments/1-core-services/manifests/traefik-jaeger.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: opensearch-http
  namespace: jaeger
spec:
  entryPoints:
  - opensearch-9200
  tls:
    secretName: opensearch-tls-keypair  
    passthrough: true
  routes:
  - match: Host(`jaeger.q.t`)
    kind: Rule
    services:
    - name: opensearch-cluster-master
      port: 9200
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: opensearch-transport
  namespace: jaeger
spec:
  entryPoints:
  - opensearch-9300
  routes:
  - match: Host(`jaeger.q.t`)
    kind: Rule
    services:
    - name: opensearch-cluster-master
      port: 9300
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: opensearch-dashboard
  namespace: jaeger
spec:
  entryPoints:
  - opensearch-5601
  routes:
  - match: Host(`jaeger.q.t`)
    kind: Rule
    services:
    - name: opensearch-dashboard
      port: 5601
