helm-deployments/1-core-services/manifests/traefik-minio.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: minio-console
  namespace: minio
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`minio.q.t`)
    kind: Rule
    services:
    - name: minio
      port: minio-console
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: minio-api
  namespace: minio
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`minio-api.q.t`)
    kind: Rule
    services:
    - name: minio
      port: minio-api
